# guit

./: .gitignore  CHANGELOG.md  Cargo.toml
src/: lib.rs  main.rs
src/project/: consts.rs
src/project/lib/enums/: file_status_kind.rs
src/project/lib/structs/: author_info.rs  branches.rs  commit_info.rs  file_status_entry.rs  message.rs  repository_info.rs
src/project/lib/structs/author_info/: display.rs  from.rs  new.rs  to_signature.rs
src/project/lib/structs/author_info/get/: email.rs  name.rs
src/project/lib/structs/branches/: new.rs
src/project/lib/structs/branches/get/: local.rs  remote.rs
src/project/lib/structs/commit_info/: new.rs
src/project/lib/structs/commit_info/get/: author.rs  branches.rs  date.rs  id.rs  is_head.rs  message.rs  parents.rs  tags.rs
src/project/lib/structs/file_status_entry/: new.rs
src/project/lib/structs/file_status_entry/get/: path.rs  status.rs
src/project/lib/structs/message/: display.rs  new.rs
src/project/lib/structs/message/get/: description.rs  message.rs  summary.rs
src/project/lib/structs/repository_info/: new.rs  try_from.rs
src/project/lib/structs/repository_info/commands/: add_files.rs  commit_changes.rs  log.rs  push.rs  remove_files.rs
src/project/lib/structs/repository_info/commands/log/: log.rs
src/project/lib/structs/repository_info/get/: name.rs  repo.rs
src/project/lib/utils/commands/: branches.rs  commit.rs  head.rs  tags.rs
src/project/lib/utils/helpers/: find_branches.rs
src/project/lib/utils/log/: branches.rs  commit.rs  date.rs  head.rs  tags.rs
