[package]
name = "guit"
version = "0.1.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/bkoshik/guit"
license = "Apache-2.0"
license-file = "LICENSE"
keywords = ["development-tools"]

[lib]
name = "guit"
path = "src/lib.rs"
proc-macro = false

[[bin]]
name = "guit"
path = "src/main.rs"

[dependencies]
git2 = "0.20.2"
ratatui = "0.30.0-alpha.5"
crossterm = "0.29.0"