[package]
name = "guit"
version = "0.1.0-alpha.4"
edition = "2024"
readme = "README.md"
repository = "https://github.com/bkoshik/guit"
license = "Apache-2.0"
keywords = ["development-tools"]

[lib]
name = "guit"
path = "src/lib.rs"
proc-macro = false

[[bin]]
name = "guit"
path = "src/main.rs"

[profile.dev]
opt-level = 0
lto = "off"

[profile.release]
opt-level = 3
lto = "fat"

[dependencies]
git2 = "0.20.2"
chrono = "0.4.42"